add_subdirectory(common)
add_subdirectory(pencil)
add_subdirectory(ink)
#add_subdirectory(# scheme)
add_subdirectory(selection)
add_subdirectory(nodes)
#add_subdirectory(# text)
add_subdirectory(geometric)
#add_subdirectory(# shift)
add_subdirectory(fill)
#add_subdirectory(# eraser)
add_subdirectory(polyline)
add_subdirectory(motion)
add_subdirectory(rotation)
add_subdirectory(scale)
add_subdirectory(shear)
add_subdirectory(opacity)
add_subdirectory(color)
add_subdirectory(papagayo)
